# ai-generalist-eci-results-site

./: .gitignore  README.md  alembic.ini  config.py  constants.py  logger.py  pyproject.toml  requirements.txt
api/: main.py
api/repositories/: election_repo.py
api/routers/: analytics.py  constituencies.py  elections.py  parties.py  states.py
api/schemas/: schemas.py
dashboard/: app.py  utils.py
dashboard/pages/: 1_home.py  2_state.py  3_constituency.py  4_party_analytics.py  5_trends.py
db/: models.py  session.py
db/migrations/: env.py
docker/: Dockerfile.dashboard  docker-compose.yml
etl/: pipeline.py
etl/loaders/: db_loader.py
etl/transforms/: constituency_transform.py  party_transform.py
scraper/: base.py  candidate_scraper.py  constituency_scraper.py  index_scraper.py  party_scraper.py
tests/: test_api.py  test_scrapers.py
